--- a/src/assets/details.css
+++ b/src/assets/details.css
@@ -1,13 +1,14 @@
 .dataBody {
     width: 260px;
-    margin: 70px 80px 30px 95px;
-    padding: 10px;
+    margin: 70px 80px 0 95px;
+    padding: 0 10px 0 10px;
     text-align: center;
     font-size: 50px;
     font-family: 微软雅黑, serif;
     background: linear-gradient(to bottom, #cc86d1, #dcffbd);
     border: 4px solid black;
     border-radius: 10px;
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
 .dataBody:hover {
