--- a/src/assets/details.css
+++ b/src/assets/details.css
@@ -8,14 +8,16 @@
     background: linear-gradient(to bottom, #cc86d1, #dcffbd);
     border: 4px solid black;
     border-radius: 10px;
+    transition: all 0.4s ease 0s;
     box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
 .dataBody:hover {
     cursor: pointer;
     border: 4px solid whitesmoke;
-    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 10px 17px 46px 10px rgba(0, 0, 0, 0.34), 10px 17px 46px 10px rgba(0, 0, 0, 0.39);
     transition-duration: 0.8s;
+    transition: all 0.4s ease 0s;
     transform: translateY(-12px);
 }
 
